# Taco

./: .gitignore  Cargo.toml
client/: Cargo.toml  build.rs
client/src/: components.rs  main.rs  server.rs  structs.rs  ws_client.rs
client/src/components/: chat.rs  chat_list.rs  header.rs  letter.rs  letter_list.rs  login_screen.rs  main_screen.rs  mod.rs  settings.rs  web_image.rs
server/: Cargo.toml
server/prisma/: database.db  schema.prisma
server/prisma/migrations/20231221143955_create_everything/: migration.sql
server/prisma/migrations/20231223093919_add_session/: migration.sql
server/prisma/migrations/20231223112128_add_session_deletes_at/: migration.sql
server/prisma/migrations/20231223112503_delete_deletes_at/: migration.sql
server/prisma/migrations/20240111140806_add_message_created_at/: migration.sql
server/prisma/migrations/20240117144151_add_chat_last_updated/: migration.sql
server/prisma/migrations/20240117144326_edit_chat_last_updated_wow/: migration.sql
server/prisma/migrations/20240120122116_add_delete_hui/: migration.sql
server/prisma/migrations/20240122152326_remove_display_name/: migration.sql
server/src/: auth.rs  db.rs  main.rs  prisma.rs  upload.rs  user.rs
structs/: Cargo.toml
structs/src/: lib.rs
