[package]
    name   ="client"
    version="0.1.0"
    edition="2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
httparse = "1.8.0"
    iced={version="0.10.0", features=[
        "image",
        "tokio",
    ]}
    iced_aw={version="0.7.0", features=[
        "modal",
    ]}
    indexmap="2.1.0"
    once_cell="1.19.0"
    reqwest="0.11.23"
    serde={version="1.0.193", features=[
        "derive",
    ]}
    serde_json="1.0.108"
    structs={path="../structs"}
    tokio={version="1.35.1", features=[
        "full",
    ]}
    tokio-tungstenite="0.21.0"

[build-dependencies]
winres = "0.1"
