[package]
    name   ="server"
    version="0.1.0"
    edition="2021"
[dependencies]
    serde={version="1.0.193", features=[
        "derive",
    ]}
    prisma-client-rust={git="https://github.com/Brendonovich/prisma-client-rust", tag="0.6.10"}
    prisma-client-rust-cli={git="https://github.com/Brendonovich/prisma-client-rust", tag="0.6.10"}
    tokio="1.35.1"
    axum="0.7.2"
    tracing-subscriber="0.3.18"
    sha256="1.4.0"
    chrono="0.4.31"
    serde_json="1.0.108"
    structs={path="../structs"}
